--- a/lib/phx_liveview_chat_web/live/room_live.html.heex
+++ b/lib/phx_liveview_chat_web/live/room_live.html.heex
@@ -1,16 +1,23 @@
 
-<p>Currently chatting in <strong><%= @room_id %></strong></p>
+<p>Currently chatting in <strong><%= @room_id %></strong> as <strong><%= @username %></strong> </p>
 <div id="chat-container">
     <div id="chat-messages" phx-update="append">
         <%= for message <- @messages do %>
-            <p id={message.uuid}><%= message.content %></p>
+            <%=  display_message(message) %>
         <% end %>
     </div>
 
-    <.form let={f} for={:chat} phx_submit={:submit_message} phx_change={:form_updated}>
-
-        <%= text_input f, :message, placeholder: "Enter your message...", value: @message %>
-
-    </.form>
+    <div id="user-list">
+        <h3>Users online</h3>
+        <%= for user <- @user_list do %>
+            <p><strong><%=  user %></strong></p>
+        <% end %>
+    </div>
 
 </div>
+
+<.form let={f} for={:chat} phx_submit={:submit_message} phx_change={:form_updated}>
+
+    <%= text_input f, :message, placeholder: "Enter your message...", value: @message %>
+
+</.form>
